{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 23,
  "lineage": "c11224ec-ca0b-9ab5-7391-28e0d6637e73",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:946775837287:internet-gateway/igw-007c042fc0b5b28be",
            "id": "igw-007c042fc0b5b28be",
            "owner_id": "946775837287",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "igw-azsis-kbeauty-dr"
            },
            "tags_all": {
              "Name": "igw-azsis-kbeauty-dr"
            },
            "vpc_id": "vpc-09ef4d559a1b83d87"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "946775837287",
            "id": "igw-007c042fc0b5b28be",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:946775837287:route-table/rtb-0d5fc2f5e24311612",
            "id": "rtb-0d5fc2f5e24311612",
            "owner_id": "946775837287",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-007c042fc0b5b28be",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-azsis-kbeauty-dr-public"
            },
            "tags_all": {
              "Name": "rt-azsis-kbeauty-dr-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ef4d559a1b83d87"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "946775837287",
            "id": "rtb-0d5fc2f5e24311612",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:946775837287:subnet/subnet-09e444c9b5746a974",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e444c9b5746a974",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "946775837287",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "subnet-azsis-kbeauty-dr-eks-1"
            },
            "tags_all": {
              "Name": "subnet-azsis-kbeauty-dr-eks-1"
            },
            "vpc_id": "vpc-09ef4d559a1b83d87"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "946775837287",
            "id": "subnet-09e444c9b5746a974",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:946775837287:subnet/subnet-00be4e57452c4a49f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00be4e57452c4a49f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "946775837287",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "subnet-azsis-kbeauty-dr-eks-2"
            },
            "tags_all": {
              "Name": "subnet-azsis-kbeauty-dr-eks-2"
            },
            "vpc_id": "vpc-09ef4d559a1b83d87"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "946775837287",
            "id": "subnet-00be4e57452c4a49f",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:946775837287:subnet/subnet-01da0111fac757ad3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01da0111fac757ad3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "946775837287",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "subnet-azsis-kbeauty-dr-rds-1"
            },
            "tags_all": {
              "Name": "subnet-azsis-kbeauty-dr-rds-1"
            },
            "vpc_id": "vpc-09ef4d559a1b83d87"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "946775837287",
            "id": "subnet-01da0111fac757ad3",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:946775837287:subnet/subnet-0aa03b24cf6a0ffdc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa03b24cf6a0ffdc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "946775837287",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "subnet-azsis-kbeauty-dr-rds-2"
            },
            "tags_all": {
              "Name": "subnet-azsis-kbeauty-dr-rds-2"
            },
            "vpc_id": "vpc-09ef4d559a1b83d87"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "946775837287",
            "id": "subnet-0aa03b24cf6a0ffdc",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:946775837287:vpc/vpc-09ef4d559a1b83d87",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.0.0.0/16",
            "default_network_acl_id": "acl-0917a25486ff2a6ed",
            "default_route_table_id": "rtb-00ddb952d5fa3a35b",
            "default_security_group_id": "sg-00d3f73f17dd7f436",
            "dhcp_options_id": "dopt-0563a59ca5e84e1c8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09ef4d559a1b83d87",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00ddb952d5fa3a35b",
            "owner_id": "946775837287",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "vpc-azsis-kbeauty-dr"
            },
            "tags_all": {
              "Name": "vpc-azsis-kbeauty-dr"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "946775837287",
            "id": "vpc-09ef4d559a1b83d87",
            "region": "ap-northeast-2"
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:946775837287:security-group/sg-0cd613991c4f5a378",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd613991c4f5a378",
            "ingress": [],
            "name": "nsg-azsis-kbeauty-dr-dms",
            "name_prefix": "",
            "owner_id": "946775837287",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nsg-azsis-kbeauty-dr-dms"
            },
            "tags_all": {
              "Name": "nsg-azsis-kbeauty-dr-dms"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ef4d559a1b83d87"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "946775837287",
            "id": "sg-0cd613991c4f5a378",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:946775837287:security-group/sg-029f718ed69f34dc4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029f718ed69f34dc4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from DMS",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cd613991c4f5a378"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "nsg-azsis-kbeauty-dr-rds",
            "name_prefix": "",
            "owner_id": "946775837287",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nsg-azsis-kbeauty-dr-rds"
            },
            "tags_all": {
              "Name": "nsg-azsis-kbeauty-dr-rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ef4d559a1b83d87"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "946775837287",
            "id": "sg-029f718ed69f34dc4",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.dms"
          ]
        }
      ]
    }
  ]
}